--- a/style.css
+++ b/style.css
@@ -8,19 +8,19 @@ html,
 }
 
 .card {
-  height: 40rem;
-  width: 30%;
-  border: 2pc solid rgb(0, 0, 0);
+  height: 30rem;
+  width: 26%;
+  border: 1pc solid rgb(0, 0, 0);
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
   margin: 3rem auto;
 }
 
 .card-img {
   width: 100%;
-  height: 45%;
+  height: 40rem;
   object-fit: cover;
 }
 
@@ -36,5 +36,5 @@ html,
   flex-wrap: wrap;
   width: 90%;
   margin: 2rem auto;
-  justify-content: space-around;
+  justify-content: space-between;
 }
