--- a/style.css
+++ b/style.css
@@ -9,28 +9,44 @@ html,
 
 .card {
   height: 30rem;
+  margin: 3rem auto;
   width: 26%;
-  border: 1pc solid rgb(0, 0, 0);
+  border: 2pc solid rgb(0, 0, 0);
+  border-radius: 3px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
-  margin: 3rem auto;
 }
+
+/*.card-img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}*/
 
 .card-img {
   width: 100%;
-  height: 40rem;
+  height: 100%;
+  transform-origin: bottom center;
+  transform: perspective(100px) rotateX(0);
+  transition: 0.5s all ease;
   object-fit: cover;
+}
+
+.card:hover .card-img {
+  transform: perspective(100px) rotateX(50deg);
 }
 
 .card-header {
   margin-top: 1.2rem;
 }
 
-.card-price {
-  margin-top: 1.2rem;
+.card-number {
+  margin-top: 0rem;
+  color: #fff;
 }
+
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -38,3 +54,77 @@ html,
   margin: 2rem auto;
   justify-content: space-between;
 }
+
+/*body,
+html,
+* {
+  font-size: 10px;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  background-color: rgb(0, 0, 0);
+  margin-top: 30px;
+}
+
+.box {
+  text-align: center;
+  overflow: hidden;
+  position: relative;
+  margin-bottom: 30px;
+}
+
+
+
+.box img {
+  width: 100px;
+  height: auto;
+  transform-origin: bottom center;
+  transform: perspective(100px) rotateX(0);
+  transition: 0.5s all ease;
+}
+
+.box:hover img {
+  transform: perspective(100px) rotateX(50deg);
+}
+
+.box_content {
+  color: #fff;
+  width: 100px;
+  height: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform-origin: top center;
+  transform: perspective(100px) rotateX(-50deg);
+  opacity: 0;
+  background: linear-gradient(
+    to right,
+    rgba(255, 65, 108, 0.8),
+    rgba(255, 75, 43, 0.8)
+  );
+
+  transition: 0.5s all ease;
+}
+
+.box:hover .box_content {
+  opacity: 1;
+  transform: perspective(100px) rotateX(0);
+}
+
+.box .box_content .content .title {
+  font-size: 14px;
+  font-weight: 700;
+  display: block;
+  letter-spacing: ;
+  margin-bottom: 0;
+  text-transform: capitalize;
+}
+*/
+
+/* I used bootstrap for effects  */
