--- a/style.css
+++ b/style.css
@@ -11,19 +11,18 @@ html,
   height: auto;
   margin: 3rem auto;
   width: 26%;
-  border: 2pc solid rgb(0, 0, 0);
+  border: 2rem solid rgb(0, 0, 0);
   border-radius: 3px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-around;  
 }
 
-/*.card-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}*/
+.header{
+  text-align: center;
+  font-size: 100px;
+}
 
 .card-img {
   width: 100%;
@@ -38,14 +37,19 @@ html,
   transform: perspective(100px) rotateX(50deg);
 }
 
+/* I used bootstrap for effects  */
+
+
 .card-header {
   margin-top: 1.2rem;
+  color:
 }
 
 .card-number {
-  margin-top: 0rem;
-  color: #fff;
+
+  color: #000000;
 }
+
 
 .container {
   display: flex;
@@ -55,45 +59,11 @@ html,
   justify-content: space-between;
 }
 
-/*body,
-html,
-* {
-  font-size: 10px;
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-}
 
-body {
-  background-color: rgb(0, 0, 0);
-  margin-top: 30px;
-}
-
-.box {
-  text-align: center;
-  overflow: hidden;
-  position: relative;
-  margin-bottom: 30px;
-}
-
-
-
-.box img {
-  width: 100px;
-  height: auto;
-  transform-origin: bottom center;
-  transform: perspective(100px) rotateX(0);
-  transition: 0.5s all ease;
-}
-
-.box:hover img {
-  transform: perspective(100px) rotateX(50deg);
-}
-
-.box_content {
+.card_content {
   color: #fff;
-  width: 100px;
-  height: 100px;
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 0;
   left: 0;
@@ -112,12 +82,12 @@ body {
   transition: 0.5s all ease;
 }
 
-.box:hover .box_content {
+.card:hover .card_content {
   opacity: 1;
   transform: perspective(100px) rotateX(0);
 }
 
-.box .box_content .content .title {
+.card .card_content .card-number .card-header {
   font-size: 14px;
   font-weight: 700;
   display: block;
