--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ html,
 .header{
   text-align: center;
   font-size: 100px;
+  flex-shrink: 3;
 }
 
 .card-img {
@@ -31,6 +32,9 @@ html,
   transform: perspective(100px) rotateX(0);
   transition: 0.5s all ease;
   object-fit: cover;
+  flex-shrink: 3;
+  display: flex;
+  flex-direction: row;
 }
 
 .card:hover .card-img {
@@ -52,12 +56,25 @@ html,
 
 
 .container {
-  display: flex;
-  flex-wrap: wrap;
   width: 90%;
   margin: 2rem auto;
   justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  display: flex;
+  flex-wrap: wrap;
 }
+  
+
+
+
+@media (max-width: 800px) {
+  .container {
+  flex-direction: column;
+  }
+}
+
+
 
 
 .card_content {
@@ -73,7 +90,7 @@ html,
   transform-origin: top center;
   transform: perspective(100px) rotateX(-50deg);
   opacity: 0;
-  background: linear-gradient(
+  background: \linear-gradient(
     to right,
     rgba(255, 65, 108, 0.8),
     rgba(255, 75, 43, 0.8)
@@ -94,6 +111,7 @@ html,
   letter-spacing: ;
   margin-bottom: 0;
   text-transform: capitalize;
+
 }
 */
 
