--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html,
   margin: 3rem auto;
   width: 26%;
   border: 2rem solid rgb(0, 0, 0);
-  border-radius: 3px;
+  border-radius: 3rem;
   display: flex;
   flex-direction: column;
   align-items: center;
