--- a/style.css
+++ b/style.css
@@ -5,122 +5,65 @@ html,
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  background-color: black
 }
 
 .header {
   text-align: center;
-  font-size: 100px;
+  font-size: 20px;
   flex-shrink: 3;
 }
 
 .card-header {
   margin-top: 1.2rem;
-  color: ;
+  color: #7a7373; ;
 }
 
 .card-number {
-  color: #000000;
+  margin-bottom: 1.2rem;
+  color: #7a7373;
+
 }
 
 /*header*/
 
 .card {
-  height: auto;
+  height: 500px;
   margin: 3rem auto;
-  width: 26%;
-  border: 2rem solid rgb(0, 0, 0);
-  border-radius: 3rem;
+  width: 32%;
+  border: 2rem solid red;
+  border-color: red;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-around;
+  border-radius: 25px;
+  border-style: solid;
 }
 
-.card1 {
-  height: auto;
-  margin: 3rem auto;
-  width: 26%;
-  border: 2rem solid rgb(0, 0, 0);
-  border-radius: 3rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-}
-
-.card2 {
-  height: auto;
-  margin: 3rem auto;
-  width: 26%;
-  border: 2rem solid rgb(0, 0, 0);
-  border-radius: 3rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-}
-
-/* making the cards*/
 
 .card-img {
   width: 100%;
   height: 100%;
-  transform-origin: bottom center;
+  object-fit: contain;
+  max-height: 90%;
+  
+  /*transform-origin: bottom center;
   transform: perspective(100px) rotateX(0);
   transition: 0.5s all ease;
-  object-fit: cover;
+  object-fit: contain;
   flex-shrink: 3;
   display: flex;
-  flex-direction: row;
+  flex-direction: row;*/.
+
 }
 
-.card-img1 {
-  width: 100%;
-  height: 100%;
-  transform-origin: bottom center;
-
-  transition: 0.5s all ease;
-  object-fit: cover;
-  flex-shrink: 3;
-  display: flex;
-  flex-direction: row;
-}
-
-.card-img2 {
-  width: 100%;
-  height: 100%;
-  transform-origin: bottom center;
-
-  transition: 0.5s all ease;
-  object-fit: cover;
-  flex-shrink: 3;
-  display: flex;
-  flex-direction: row;
-}
-
-/*animation*/
-
+/*
 .card:hover .card-img {
   transform: perspective(100px) rotateX(50deg);
 }
 
-.card1:hover {
-  animation: contract 0.5s ease-in-out forwards;
-}
-
-.card1:not(:hover) {
-  animation: expand 0.5s ease-in-out;
-}
-
-.card2:hover {
-  animation: slide-in 1s ease-in-out forwards;
-}
-
-.card2:not(:hover) {
-  animation: slide-out 1s ease-in-out;
-}
-
-/* I used bootstrap for effects  */
+ I used bootstrap for effects  */
 
 .container {
   width: 90%;
@@ -132,49 +75,25 @@ html,
   flex-wrap: wrap;
 }
 
-@media (max-width: 800px) {
-  .container {
+@media screen and (max-width:1000px){
+  .card {
+    width 45%;
+   }
+}
+
+@media screen and (max-width:600px){
+  .container{
     flex-direction: column;
   }
-}
-
-@keyframes contract {
-  0% {
-    transform: scaleY(100%);
-  }
-  100% {
-    transform: scaleY(50%);
+  .card{
+    width 100%;
   }
 }
 
-@keyframes expand {
-  0% {
-    transform: scaleY(50%);
-  }
-  100% {
-    transform: scaleY(100%);
-  }
-}
 
-@keyframes slide-in {
-  from {
-    transform: translateY(-100%);
-  }
-  to {
-    transform: translateY(0%);
-  }
-}
-
-@keyframes slide-out {
-  from {
-    transform: translateY(0%);
-  }
-  to {
-    transform: translateY(-100%);
-  }
-}
 
 /*
+
 .card_content {
   color: #fff;
   width: 100%;
@@ -209,8 +128,9 @@ html,
   letter-spacing: ;
   margin-bottom: 0;
   text-transform: capitalize;
+  min-height: 90%;
 
 }
-*/
+
 
 /* I used bootstrap for effects  */
