--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ html,
   margin: 0;
   padding: 0;
   background-color: black;
+  font-family: "Press Start 2P", system-ui;
+  font-weight: 400;
+  font-style: normal;
+  
 }
 
 
@@ -31,9 +35,9 @@ html,
 /*header*/
 
 .card {
-  height: 500px;
+  height: 360px;
   margin: 3rem auto;
-  width: 32%;
+  width: 24%;
   border: 2rem solid red;
   display: flex;
   flex-direction: column;
@@ -137,31 +141,6 @@ html,
 /* I used bootstrap for effects  */
 
 
-.card1 {
-  height: 500px;
-  margin: 3rem auto;
-  width: 32%;
-  border: 2rem solid red;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-  border-radius: 1rem;
-  box-shadow: 5px 10px;
-  background-color: black;
-}
-
-
-.card-img1 {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  max-height: 90%;
-  object-fit: contain;
-  flex-shrink: 3;
-  display: flex;
-  flex-direction: row;
-}
 
 .card1:hover {
   animation: contract 0.5s ease-in-out forwards;
@@ -187,16 +166,6 @@ html,
 }
 
 
-.card-img2 {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  max-height: 90%;
-  object-fit: contain;
-  flex-shrink: 3;
-  display: flex;
-  flex-direction: row;
-}
 
 
 
@@ -220,25 +189,137 @@ html,
   }
 }
 
+@keyframes wiggle {
+  0% {
+    transform: skew(0deg);
+  }
+  50% {
+    transform: skew(-5deg);
+  }
+  100% {
+    transform: skew(5deg);
+  }
+}
+
+@keyframes anti-wiggle {
+  0% {
+    transform: skew(5deg);
+  }
+  50% {
+    transform: skew(-5deg);
+  }
+  100% {
+    transform: skew(0deg);
+  }
+}
+
+@keyframes  rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  50% {
+    transform: rotate(-5deg);
+  }
+  100% {
+    transform: rotate(5deg);
+  }
+}
+
+@keyframes  rotateX {
+  0% {
+    transform: rotateX(0deg);
+  }
+  50% {
+    transform: rotateX(-5deg);
+  }
+  100% {
+    transform: rotateX(5deg);
+  }
+}
+
+@keyframes contractX {
+  0% {
+    transform: scaleX(100%);
+  }
+  100% {
+    transform: scaleX(50%);
+  }
+}
+
+@keyframes expandX {
+  0% {
+    transform: scaleX(50%);
+  }
+  100% {
+    transform: scaleX(100%);
+  }
+}
+
+
+@keyframes contract1 {
+  0% {
+    transform: scaleZ(200%);
+  }
+  100% {
+    transform: scaleZ(100%);
+  }
+}
+
+@keyframes expand1 {
+  0% {
+    transform: scaleZ(100%);
+  }
+  100% {
+    transform: scaleZ(200%);
+  }
+}
+
+@keyframes zoom {
+  0% {
+    transform: scaleZ(100%);
+  }
+  100% {
+    transform: scaleZ(200%);
+  }
+}
 
 
 /*animation*/
 
-.card1:hover {
+#bulb:hover {
   animation: contract 0.5s ease-in-out forwards;
 }
 
-.card1:not(:hover) {
+#bulb:not(:hover) {
   animation: expand 0.5s ease-in-out;
 }
 
-.card2:hover {
-  animation: rotate 1s ease-in-out forwards;
+
+#ivy:hover {
+ animation: wiggle 1s ease-in-out forwards;
 }
 
-.card2:not(:hover) {
-  animation: rotate1 1s ease-in-out;
+#ivy:hover{
+  animation: anti-wiggle 1s ease-in-out;
 }
+
+#ven:hover{
+  animation: rotate 1s ease-in-out;
+}
+
+#char:hover {
+  animation: contractX 0.5s ease-in-out forwards;
+}
+
+#char:not(:hover) {
+  animation: expandX 0.5s ease-in-out;
+}
+
+
+
+
+
+
 
 
 /* making the cards*/
