--- a/style.css
+++ b/style.css
@@ -9,27 +9,23 @@ html,
   font-family: "Press Start 2P", system-ui;
   font-weight: 400;
   font-style: normal;
-  
 }
-
 
 .header {
   text-align: center;
   font-size: 40px;
   flex-shrink: 3;
-  color: white
+  color: white;
 }
 
 .card-header {
-
-  color: #ffffff; 
+  color: #ffffff;
   text-align: center;
 }
 
 .card-number {
   color: #ffffff;
   text-align: center;
-
 }
 
 /*header*/
@@ -46,32 +42,28 @@ html,
   border-radius: 1rem;
   box-shadow: 5px 10px;
   background-color: black;
-
 }
-
 
 .card-img {
   width: 100%;
   height: 100%;
   object-fit: contain;
   max-height: 90%;
-  
+
   transform-origin: bottom center;
   transform: perspective(100px) rotateX(0);
   transition: 0.5s all ease;
   object-fit: contain;
   flex-shrink: 3;
   display: flex;
-  flex-direction: row;*/.
-
+  flex-direction: row;
 }
-
 
 .card:hover .card-img {
   transform: perspective(100px) rotateX(50deg);
 }
 
- /*I used bootstrap for effects  */
+/*I used bootstrap for effects  */
 
 .container {
   width: 90%;
@@ -83,23 +75,20 @@ html,
   flex-wrap: wrap;
 }
 
-@media screen and (max-width:1000px){
+@media screen and (max-width: 1000px) {
   .card {
     width: 45%;
-   }
+  }
 }
 
-@media screen and (max-width:600px){
-  .container{
+@media screen and (max-width: 600px) {
+  .container {
     flex-direction: column;
   }
-  .card{
+  .card {
     width: 100%;
   }
 }
-
-
-
 
 .card_content {
   color: #fff;
@@ -136,38 +125,8 @@ html,
   margin-bottom: 0;
   text-transform: capitalize;
   min-height: 90%;
-
 }
-/* I used bootstrap for effects  */
-
-
-
-.card1:hover {
-  animation: contract 0.5s ease-in-out forwards;
-}
-
-.card1:not(:hover){
-  animation: expand 0.5s ease-in-out;
-}
-
-
-.card2 {
-  height: 500px;
-  margin: 3rem auto;
-  width: 32%;
-  border: 2rem solid red;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
-  border-radius: 1rem;
-  box-shadow: 5px 10px;
-  background-color: black;
-}
-
-
-
-
+/* I used bootstrap for those effects  */
 
 /* keyfames */
 
@@ -213,7 +172,7 @@ html,
   }
 }
 
-@keyframes  rotate {
+@keyframes rotate {
   0% {
     transform: rotate(0deg);
   }
@@ -225,7 +184,7 @@ html,
   }
 }
 
-@keyframes  rotateX {
+@keyframes rotateX {
   0% {
     transform: rotateX(0deg);
   }
@@ -255,7 +214,6 @@ html,
   }
 }
 
-
 @keyframes contract1 {
   0% {
     transform: scaleZ(200%);
@@ -283,7 +241,55 @@ html,
   }
 }
 
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  20% {
+    transform: translate(-3px, 0px) rotate(1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  40% {
+    transform: translate(1px, -1px) rotate(1deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  60% {
+    transform: translate(-3px, 1px) rotate(0deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  80% {
+    transform: translate(-1px, -1px) rotate(1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
+  100% {
+    transform: translate(1px, -2px) rotate(-1deg);
+  }
+}
 
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(1.1);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
 /*animation*/
 
 #bulb:hover {
@@ -294,17 +300,19 @@ html,
   animation: expand 0.5s ease-in-out;
 }
 
+#ivy:hover {
+  animation: wiggle 1s ease-in-out forwards;
+  animation-iteration-count: infinite;
+}
 
 #ivy:hover {
- animation: wiggle 1s ease-in-out forwards;
-}
-
-#ivy:hover{
   animation: anti-wiggle 1s ease-in-out;
+  animation-iteration-count: infinite;
 }
 
-#ven:hover{
+#ven:hover {
   animation: rotate 1s ease-in-out;
+  animation-iteration-count: infinite;
 }
 
 #char:hover {
@@ -315,12 +323,23 @@ html,
   animation: expandX 0.5s ease-in-out;
 }
 
+#charm:hover {
+  background-color: rgb(0, 136, 255);
+}
 
+#charz:hover {
+  animation: shake 0.5s;
+}
 
+#squirtle:hover {
+  animation: pulse 0.5s ease-in-out;
+}
 
+#wartortle:hover {
+  animation: shake 0.5s;
+}
 
-
-
-
-/* making the cards*/
-
+#blastoise:hover {
+  animation: rotate 1s ease-in-out;
+  animation-iteration-count: infinite;
+}
